<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:clickable="true"

    android:focusable="true"
    android:orientation="vertical">

    <LinearLayout

        android:background="@drawable/boarder"
        android:weightSum="2"
        android:orientation="horizontal"
        android:id="@+id/header"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_location"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="#000000"
            android:text="@string/peshawar"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TextView>
        <TextView
            android:gravity="center|center_vertical"

            android:textStyle="bold"
            android:id="@+id/tv_status"
            android:textColor="#000000"
            android:text="@string/status"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></TextView>


    </LinearLayout>
    <TextView
        android:id="@+id/tv_date"
        android:textStyle="bold"
        android:text="@string/assign_date"
        android:gravity="center"
        android:background="@drawable/boarder"
        android:layout_below="@id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></TextView>
</RelativeLayout>