<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".ViewParentFeedBack">


    <ScrollView
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:weightSum="8"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:padding="10dp"
                android:background="@drawable/et_background"
                android:textColorHint="@color/white"
                android:layout_marginTop="10dp"
                android:id="@+id/tv_fathername"
                android:textSize="18dp"
                android:gravity="center"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:textColor="@color/white"
                android:hint="@string/father_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></EditText>

            <EditText
                android:padding="10dp"
                android:background="@drawable/et_background"
                android:textColorHint="@color/white"
                android:layout_marginTop="10dp"
                android:id="@+id/tv_cnic"
                android:textSize="18dp"
                android:gravity="center"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:textColor="@color/white"
                android:hint="cnin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></EditText>


            <EditText
                android:padding="10dp"
                android:background="@drawable/et_background"
                android:textColorHint="@color/white"

                android:layout_marginTop="10dp"
                android:id="@+id/tv_date"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:textSize="18dp"
                android:gravity="center"
                android:text="@string/date"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></EditText>
            <EditText

                android:padding="10dp"
                android:background="@drawable/et_background"
                android:textColorHint="@color/white"

                android:layout_marginTop="10dp"
                android:id="@+id/tv_familyNo"
                android:textSize="18dp"
                android:gravity="center"
                android:hint="@string/familyNo"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></EditText>


            <EditText

                android:padding="10dp"
                android:background="@drawable/et_background"
                android:textColorHint="@color/white"

                android:layout_marginTop="10dp"
                android:id="@+id/tv_des"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:gravity="center"
                android:hint="@string/des"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></EditText>
            <EditText

                android:padding="10dp"
                android:background="@drawable/et_background"
                android:textColorHint="@color/white"

                android:layout_marginTop="10dp"
                android:id="@+id/tv_address"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:gravity="center"
                android:hint="Address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></EditText>




            <Button


                android:textStyle="bold"
                android:padding="10dp"
                android:background="@drawable/et_background"
                android:textColorHint="@color/white"

                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:id="@+id/sendParentReport"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:gravity="center"
                android:text="Send Feed Back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></Button>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>