<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".AssignDuties">

    <ScrollView

        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:gravity="center"
                android:layout_marginBottom="5dp"
                android:id="@+id/spnTid"
                android:entries="@array/TEAM"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="65dp"/>

            <Spinner
                android:gravity="center"
                android:layout_marginBottom="5dp"
                android:id="@+id/sp_city"
                android:entries="@array/Cities"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="65dp"/>

            <EditText
                android:id="@+id/ed_assign_duties_address"
                android:padding="20dp"
                android:hint="@string/address_duties"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </EditText>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/date_lable"
                android:hint="Today Date"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="normal"
                android:layout_gravity="center"
                android:background="@drawable/background_button"
                android:padding="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                >




            <Button
                android:onClick="select_Date"
                android:text="@string/select_date"
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:textSize="25sp"
                android:background="@drawable/background_button"
                android:layout_height="50dp">

            </Button>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

            <Button
                android:onClick="SubmitDuties"
                android:text="@string/add_duty"
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textSize="25sp"
                android:textStyle="normal"
                android:background="@drawable/background_button"
            android:layout_height="50dp">

            </Button>
            </LinearLayout>
        </LinearLayout>


    </ScrollView>
</RelativeLayout>