<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".ViewDutiesDescriptions">

    <ScrollView
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:weightSum="8"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/label_teamName"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@drawable/background_button"
                android:text="@string/team_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></TextView>
            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/data_teamName"
                android:textSize="18dp"
                android:gravity="center"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:text="@string/team_name"
                android:textColor="@color/white"
                android:background="@drawable/background_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></TextView>


            <TextView
                android:layout_marginTop="20dp"
                android:id="@+id/label_date"
                android:textSize="18dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@drawable/background_button"
                android:gravity="center"
                android:text="@string/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></TextView>
            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/data_date"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:textSize="18dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@drawable/background_button"
                android:text="@string/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></TextView>
            <TextView
                android:layout_marginTop="20dp"
                android:id="@+id/label_status"
                android:textSize="18dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@drawable/background_button"
                android:text="Area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></TextView>
            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/data_status"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:textSize="18dp"
                android:textColor="@color/white"
                android:background="@drawable/background_button"
                android:gravity="center"
                android:text="@string/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></TextView>


            <TextView
                android:layout_marginTop="20dp"
                android:id="@+id/label_des"
                android:textSize="18dp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:textColor="@color/white"
                android:background="@drawable/background_button"
                android:text="@string/des"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></TextView>
            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/data_des"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:textSize="18dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@drawable/background_button"
                android:text="@string/des"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></TextView>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>